--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
-		"express": "^4.16.4"
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"helmet": "^3.18.0",
+		"knex": "^0.16.5",
+		"morgan": "^1.9.1",
+		"sqlite3": "^4.0.8"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
+		"react-testing-library": "^7.0.0",
 		"supertest": "^3.3.0"
 	}
 }
